force-app/main/default/objects/MUSW__Comment__c/MUSW__Comment__c.object-meta.xml
<CustomObject>
    <description>Comments/markups related to building and site plans.</description>
    <label>Comment</label>
    <nameField>
        <label>Comment Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>