force-app/main/default/objects/MUSW__Comment__c/fields/CVRD_DS_Applicant_Comment__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Applicant_Comment__c</fullName>
    <label>Applicant Comment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>