force-app/main/default/objects/MUSW__Comment__c/fields/CVRD_DS_Application__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>MUSW__Application2__c</referenceTo>
    <relationshipLabel>Exempted DPAs</relationshipLabel>
    <relationshipName>CVRD_DS_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>