force-app/main/default/objects/MUSW__Comment__c/fields/CVRD_DS_DPA_Name__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_DPA_Name__c</fullName>
    <label>DPA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>