force-app/main/default/objects/MUSW__Comment__c/fields/CVRD_DS_Reviewer_Comment__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Reviewer_Comment__c</fullName>
    <label>Reviewer Comment</label>
    <type>TextArea</type>
</CustomField>